# testGenie

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
dotnet_test_generator/: __init__.py  cli.py  config.py
dotnet_test_generator/agents/: __init__.py  base.py  build_fixer.py  ollama_client.py  test_generator.py
dotnet_test_generator/agents/prompts/: __init__.py  build_fixing.py  test_generation.py
dotnet_test_generator/agents/tools/: __init__.py  base.py  dotnet_tools.py  file_tools.py  git_tools.py
dotnet_test_generator/azure_devops/: __init__.py  client.py  pull_request.py  repository.py
dotnet_test_generator/core/: __init__.py  exceptions.py  workflow.py
dotnet_test_generator/dotnet/: __init__.py  builder.py  solution.py  test_runner.py
dotnet_test_generator/git/: __init__.py  operations.py
dotnet_test_generator/parsing/: __init__.py  change_detector.py  csharp_parser.py  file_tree.py
dotnet_test_generator/utils/: __init__.py  json_utils.py  logging.py
