[project]
name = "dotnet-test-generator"
version = "0.1.0"
description = "AI-Driven .NET Test Generation System for Azure DevOps Pull Requests"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # CLI
    "click>=8.1.7",
    "rich>=13.7.0",

    # HTTP client
    "httpx>=0.27.0",

    # Tree-sitter for C# parsing
    "tree-sitter>=0.23.0",
    "tree-sitter-c-sharp>=0.23.0",

    # Git operations
    "gitpython>=3.1.41",

    # Async support
    "anyio>=4.2.0",

    # Data validation
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",

    # JSON handling
    "orjson>=3.9.12",

    # Utilities
    "tenacity>=8.2.3",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
]

[project.scripts]
testgen = "dotnet_test_generator.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dotnet_test_generator"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
